fix: Extend proper spacing to large screens

--- a/components/css/buckyless/header.less
+++ b/components/css/buckyless/header.less
@@ -46,7 +46,7 @@ portal-header {
 
       .title-link {
         h1 {
-          @media (min-width: @xs) and (max-width: @sm) {
+          @media (min-width: @xs) {
             margin-left: 16px;
           }
         }
